Fixing overflow error

--- a/styles/global.css
+++ b/styles/global.css
@@ -1,5 +1,4 @@
 html {
-    overflow-x: hidden;
     --white: #FFFFFF;
     --blue: #2091F9;
 }
